--- a/1.Containers-VMs/1.3.Kubernetes/all.yaml
+++ b/1.Containers-VMs/1.3.Kubernetes/all.yaml
@@ -13,7 +13,7 @@ metadata:
   name: hello-docker
   namespace: test
   labels :
-    owner: ladzislaw
+    owner: egor
 spec:
   replicas: 3
   selector:
