--- a/1.Containers-VMs/1.2.Docker/wordpress/docker-compose.yml
+++ b/1.Containers-VMs/1.2.Docker/wordpress/docker-compose.yml
@@ -17,7 +17,7 @@ mysql:
     volumes:
         - ./db-data:/var/lib/mysql
     environment:
-        - MYSQL_ROOT_PASSWORD=aqwe123
+        - MYSQL_ROOT_PASSWORD=
     restart: always 
 
 wordpress:
